--- a/single.html
+++ b/single.html
@@ -75,7 +75,40 @@
                                     <div class="accordion-section">
                                         <a class="accordion-section-title" href="#accordion-7">Workout Levels <i class="fa fa-chevron-down"></i><div class="clearfix"></div>
                                         </a>
-                                   
+                                        <div id="accordion-7" class="accordion-section-content">
+                                            <ul>
+                                                <li><a href="#">Level 1</a></li>
+                                                <li><a href="#">Level 2</a></li>
+                                                <li><a href="#">Level 3</a></li>
+                                                <li><a href="#">Level 4</a></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                    <div class="accordion-section">
+                                        <a class="accordion-section-title" href="#accordion-8">Weight Levels <i class="fa fa-chevron-down"></i><div class="clearfix"></div>
+                                        </a>
+                                        <div id="accordion-8" class="accordion-section-content">
+                                            <ul>
+                                                <li><a href="#">Level 1</a></li>
+                                                <li><a href="#">Level 2</a></li>
+                                                <li><a href="#">Level 3</a></li>
+                                                <li><a href="#">Level 4</a></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                    <div class="accordion-section">
+                                        <a class="accordion-section-title" href="#accordion-9">Running Levels<i class="fa fa-chevron-down"></i><div class="clearfix"></div>
+                                        </a>
+                                        <div id="accordion-9" class="accordion-section-content">
+                                            <ul>
+                                                <li><a href="#">Level 1</a></li>
+                                                <li><a href="#">Level 2</a></li>
+                                                <li><a href="#">Level 3</a></li>
+                                                <li><a href="#">Level 4</a></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
                                 </div>
                     </div>
                 </div>
