--- a/single.html
+++ b/single.html
@@ -53,8 +53,12 @@
                                 <h4>Daily Statistics</h4>
                                 <div class="pro-menu">
                                     <p>Running</p>
+                                     <p>Running</p>
+                                      <p>Running</p>
+                                       <p>Running</p>
+                                        <p>Running</p>
                                     <div class="progress">
-                                        <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 0%;">
+                                        <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%;">
                                             <span class="sr-only">0% Complete</span>
                                         </div>
                                     </div>
