--- a/single.html
+++ b/single.html
@@ -52,11 +52,11 @@
                                 <h3>kimberly Thompson</h3>
                                 <h4>Daily Statistics</h4>
                                 <div class="pro-menu">
-                                    <p>Running</p>
-                                     <p>Running</p>
-                                      <p>Running</p>
-                                       <p>Running</p>
-                                        <p>Running</p>
+                                    <p>Age: </p>
+                                     <p>Address: </p>
+                                      <p>Feet size: </p>
+                                       <p>Payment: </p>
+                                        <p>Start Date: </p>
                                     
                                
                                 </div>
@@ -119,8 +119,8 @@
                                 <h3>kimberly Thompson</h3>
                                 <h4>Daily Statistics</h4>
                                 <div class="progress">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
-                                        <span class="sr-only">60% Complete</span>
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%;">
+                                        <span class="sr-only">0% Complete</span>
                                     </div>
                                 </div>
                                 <div class="progress-right">
