--- a/single.html
+++ b/single.html
@@ -49,8 +49,8 @@
                         </div>
                         <div class="profile-menu text-center">
                             <img class="img-circle border-effect" src="images/pic3.png" alt=" ">
-                                <h3>kimberly Thompson</h3>
-                                <h4>Daily Statistics</h4>
+                                <h3>Liv Keatts</h3>
+                                <h4>Feet Store</h4>
                                 <div class="pro-menu">
                                     <p>Age: </p>
                                     <p>Address: </p>
@@ -116,8 +116,8 @@
                                 <img class="img-circle border-effect" src="images/pic3.png" alt=" " />
                             </div>
                             <div class="col-md-6 details-right">
-                                <h3>kimberly Thompson</h3>
-                                <h4>Daily Statistics</h4>
+                                <h3>Liv Keatts</h3>
+                                <h4>Feet Store</h4>
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%;">
                                         <span class="sr-only">0% Complete</span>
