--- a/single.html
+++ b/single.html
@@ -127,7 +127,7 @@
                                     <p>0%</p>
                                 </div>
                                 <div class="clearfix"></div>
-                                <p>Fitness Trainer</p>
+                                <p>Feet Queen</p>
                             </div>
                             <div class="clearfix"></div>
                             
