--- a/single.html
+++ b/single.html
@@ -52,11 +52,11 @@
                                 <h3>Liv Keatts</h3>
                                 <h4>Feet Store</h4>
                                 <div class="pro-menu">
-                                    <p>Age: </p>
-                                    <p>Address: </p>
-                                    <p>Feet size: </p>
-                                    <p>Payment: </p>
-                                    <p>Start Date: </p>
+                                    <p>Age: 19</p>
+                                    <p>Address: 81 Greenleaf Rd</p>
+                                    <p>Feet size: 35</p>
+                                    <p>Payment: Cashapp - Alivia Keatts Venmo - Liv-Keatts</p>
+                                    <p>Start Date: 03/06/2019</p>
                                     
                                     
                                 </div>
